Adds validation by creating and event and its subscriber

--- a/.env
+++ b/.env
@@ -19,7 +19,7 @@ APP_ENV=dev
 APP_SECRET=c4396d3ce0646d055f431c84d0b3259a
 ###< symfony/framework-bundle ###
 
-#DATABASE_URL="mysql://db_user:db_password@127.0.0.1:3306/db_name?serverVersion=8.0&charset=utf8mb4"
+DATABASE_URL="mysql://db_user:db_password@127.0.0.1:3306/db_name?serverVersion=8.0&charset=utf8mb4"
 
 MYSQL_ROOT_PASSWORD=password
 MYSQL_DATABASE=main
