--- a/.env
+++ b/.env
@@ -1,25 +1,12 @@
-# In all environments, the following files are loaded if they exist,
-# the latter taking precedence over the former:
-#
-#  * .env                contains default values for the environment variables needed by the app
-#  * .env.local          uncommitted file with local overrides
-#  * .env.$APP_ENV       committed environment-specific defaults
-#  * .env.$APP_ENV.local uncommitted environment-specific overrides
-#
-# Real environment variables win over .env files.
-#
-# DO NOT DEFINE PRODUCTION SECRETS IN THIS FILE NOR IN ANY OTHER COMMITTED FILES.
-# https://symfony.com/doc/current/configuration/secrets.html
-#
-# Run "composer dump-env prod" to compile .env files for production use (requires symfony/flex >=1.2).
-# https://symfony.com/doc/current/best_practices.html#use-environment-variables-for-infrastructure-configuration
+# webserver
+PHPVERSION=php81
+HOST_MACHINE_UNSECURE_HOST_PORT=8000
 
-###> symfony/framework-bundle ###
-APP_ENV=dev
-APP_SECRET=c4396d3ce0646d055f431c84d0b3259a
-###< symfony/framework-bundle ###
-
-DATABASE_URL="mysql://db_user:db_password@127.0.0.1:3306/db_name?serverVersion=8.0&charset=utf8mb4"
-
+# database
+HOST_MACHINE_MYSQL_PORT=3306
+MYSQL_USER=root
 MYSQL_ROOT_PASSWORD=password
 MYSQL_DATABASE=main
+
+# redis
+HOST_MACHINE_REDIS_PORT=6379
