--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,20 +1,41 @@
 version: '3'
 
 services:
+  webserver:
+    build:
+      context: ./docker/bin/${PHPVERSION}
+    ports:
+      - "${HOST_MACHINE_UNSECURE_HOST_PORT}:80"
+    volumes:
+      - ./app:/var/www/html
+      - ./docker/config/php/php.ini:/usr/local/etc/php/php.ini
+      - ./docker/config/vhosts:/etc/apache2/sites-enabled
+      - ./docker/logs/apache2:/var/log/apache2
+    depends_on:
+      - database
+      - redis
+    networks:
+      - symfony
   database:
-    image: 'mysql:latest'
+    image: 'mysql:8.0'
     volumes:
       - ./mysql:/var/lib/mysql
+    command: --default-authentication-plugin=mysql_native_password --character-set-server=utf8mb4 --collation-server=utf8mb4_unicode_ci
+    restart: "always"
     environment:
+      MYSQL_USER: ${MYSQL_USER}
       MYSQL_ROOT_PASSWORD: ${MYSQL_ROOT_PASSWORD}
       MYSQL_DATABASE: ${MYSQL_DATABASE}
     ports:
-      # To allow the host machine to access the ports below, modify the lines below.
-      # For example, to allow the host to connect to port 3306 on the container, you would change
-      # "3306" to "3306:3306". Where the first port is exposed to the host and the second is the container port.
-      # See https://docs.docker.com/compose/compose-file/compose-file-v3/#ports for more information.
-      - '3306'
+      - "${HOST_MACHINE_MYSQL_PORT}:3306"
+    networks:
+      - symfony
   redis:
-    image: redis:7.0.0
+    image: 'redis:latest'
     ports:
-      - "6379"
+      - "${HOST_MACHINE_REDIS_PORT}:6379"
+    networks:
+      - symfony
+
+networks:
+  symfony:
