--- a/app/composer.json
+++ b/app/composer.json
@@ -28,6 +28,7 @@
         "symfony/yaml": "6.1.*"
     },
     "require-dev": {
+        "doctrine/doctrine-fixtures-bundle": "^3.4",
         "phpunit/phpunit": "^9.5",
         "symfony/browser-kit": "6.1.*",
         "symfony/css-selector": "6.1.*",
