Bugfix in database docker setup

--- a/.env
+++ b/.env
@@ -4,7 +4,7 @@ HOST_MACHINE_UNSECURE_HOST_PORT=8000
 
 # database
 HOST_MACHINE_MYSQL_PORT=3306
-MYSQL_USER=root
+MYSQL_ROOT_USER=root
 MYSQL_ROOT_PASSWORD=password
 MYSQL_DATABASE=main
 
